Update scheme details screen with dynamic data and internationalization improvements
- Remove unused Typography imports across multiple components
- Add minInvestment and minSipAmount props to NavGraph component
- Display dynamic minimum investment amounts instead of hardcoded values
- Internationalize NAV label and per day text in tooltip
- Fix one year benchmark return to display actual data instead of hardcoded value
- Update Riskometer to use i18n keys and match values for risk levels
- Correct

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -65,6 +65,8 @@
     "startSIP": "Start SIP",
     "minOneTimeAmount": "Min One Time Amount",
     "minSIPAmount": "Min SIP Amount",
+    "navLabel": "NAV",
+    "perDay": "day",
     "periodReturn1M": "1M return",
     "periodReturn3M": "3M return",
     "periodReturn6M": "6M return",
@@ -104,7 +106,7 @@
   "riskometer": {
     "title": "Riskometer",
     "low": "Low",
-    "moderatelyLow": "Moderately Low",
+    "lowToModerate": "Low to Moderate",
     "moderate": "Moderate",
     "moderatelyHigh": "Moderately High",
     "high": "High",
