Add Chinese language support with animated toggle component and comprehensive i18n documentation
- Add Chinese (zh.json) translation file with 220+ keys matching English structure
- Register Chinese language in i18n config with LANGUAGES registry array
- Create LanguageToggle component with animated pill-style switcher (EN ↔ 中文)
- Update AppBar to support children slot for language toggle placement
- Add comprehensive i18n documentation section to README covering:
  - Language toggle usage

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -208,6 +208,9 @@
     "yearShort": "Y",
     "dayShort": "D"
   },
+  "languageToggle": {
+    "title": "Language"
+  },
   "format": {
     "navWithDate": "{{label}} : {{date}}",
     "navChange": "{{arrow}} {{currency}}{{change}} ({{sign}}{{percentage}}%)",
